tests/e2e/tests/pilot/testdata/networking/v1alpha3/rule-ingressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-bound-route
spec:
  hosts:
  - uk.bookinfo.com
  gateways:
  - istio-ingressgateway # pinned to ingress gateway only
  http:
  - route:
    - destination:
        host: c
        subset: v2
        port:
          number: 80
  tcp:
  - match:
    - port: 31400
    route:
    - destination:
        host: c
        subset: v1
        port:
           number: 90
  tls:
  - match:
    - sniHosts:
      - google.com
    route:
    - destination:
        host: google.com
        port:
           number: 443
